--- a/블로그/index.html
+++ b/블로그/index.html
@@ -2,7 +2,7 @@
 <html lang="ko">
   <head>
     <meta charset="utf-8" />
-    <title>하남시시변기막힘 하수구막힘 싱크대막힘 뚫는 업체 > 블로그 - 즉시 출동!</title>
+    <title>하남시변기막힘 하수구막힘 싱크대막힘 뚫는 업체 > 블로그 - 즉시 출동!</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       content="하남시변기막힘, 하남시변기뚫는업체, 하남시하수구막힘, 하남시변기수리, 하남시싱크대막힘, 하남시변기역류, 하남시변기뚫음"
