--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
     <meta name="twitter:domain" content="하남시변기막힘">
     
     <meta name="google-site-verification" content="fQ2YH9HWBcFtdI3IkOoPrNZ3z38SrRMBiACjLH9_u3k" />
+    <meta name="naver-site-verification" content="759ac7808512d71928abfdbe3477cea44cc3c417" />
 
   
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9755454846573489"
